2008-08-15  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.7.0
	* This release contains major feature enhancements and bugfixes:
		- Implement 2-norm Multiple Kernel Learning
	* Bugfixes:
		- Tests are now run in the examples/interface directory, with paths set
		to the installation directory
		- Filter out duplicate signals in signal handler and make sure the
		handler is removed.

2008-06-13  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.3
	* This release contains several cleanups and bugfixes:
		- Fail nicely in out of memory situations.
		- Drop R package, now configure; make; make install will work for all
		interfaces.
		- Disable progress output by default. Ocas now uses a progress bar and
		  hence is less verbose.
		- Revised directory structure with /doc, /examples, /src, /testsuite.
		- Add common toy data repository and make all examples from all interfaces
		use it.
		- Add examples for cmdline interface.
		- Dynamically generate a reference documentation for the static interfaces.
		- Syntax highlight commands again.
		- Support for cplex 11.
		- Port MKL examples to R.
		- Merge structure learning branch.
	* Bugfixes:
		- Don't render string if it is not printed in current loglevel anyway
		and throw exceptions for messages with priority ERROR or higher.
		- Compile fix when lapack is not available.
		- Fix when only lapack and blas (but not atlas) are available.
		- Fix bug in batch/linadd occurring for WD kernel of order 1.
		- Check that strings have same length on initing WD kernels.
		- Remove signal handler on Ctrl+C to fix Ctrl+C pressed twice bug.
		- All derived classes now call their parent class on construction.
		- Fix a crasher occuring with SVRLight on multiple threads.

2008-05-15  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.2
		- Experimental support for r-modular thanks to the swig team!
		- All python-modular examples describing the use of kernels,