@@ -18,7 +18,42 @@
 #endif //USE_SVMLIGHT
 
 #ifdef USE_SVMLIGHT
-/** class SVRLight */
+/** Class SVRLight, performs support vector regression using SVMLight. The SVR solution can be expressed as 
+ *  \f[
+ * 		f({\bf x})=\sum_{i=1}^{N} \alpha_i k({\bf x}, {\bf x_i})+b
+ * 	\f]
+ *
+ * 	where \f$\alpha\f$ and \f$b\f$ are determined in training, i.e. using a
+ * 	pre-specified kernel, a given tube-epsilon for the epsilon insensitive
+ * 	loss, the follwoing quadratic problem is minimized (using the chunking
+ * 	decomposition technique)
+ *
+ * 	\f{eqnarray*}
+ * 		\max_{{\bf \alpha},{\bf \alpha}^*} &-\frac{1}{2}\sum_{i,j=1}^N(\alpha_i-\alpha_i^*)(\alpha_j-\alpha_j^*){\bf x}_i^T {\bf x}_j -\sum_{i=1}^N(\alpha_i+\alpha_i^*)\epsilon - \sum_{i=1}^N(\alpha_i-\alpha_i^*)y_i\\
+ * 		\mbox{wrt}:& {\bf \alpha},{\bf \alpha}^*\in{\bf R}^N\\
+ * 		\mbox{s.t.}:& 0\leq \alpha_i,\alpha_i^*\leq C,\, \forall i=1\dots N\\
+ * 					&\sum_{i=1}^N(\alpha_i-\alpha_i^*)y_i=0
+ * \f}
+ *
+ *
+ * Note that the SV regression problem is reduced to the standard SV
+ * classification problem by introducing artificial labels \f$-y_i\f$ which
+ * leads to the epsilon insensitive loss constraints * \f{eqnarray*}
+ * 		\w^T{\bf x}_i+b-c_i-\xi_i\leq 0,&\, \forall i=1\dots N\\
+ * 		-\w^T{\bf x}_i-b-c_i^*-\xi_i^*\leq 0,&\, \forall i=1\dots N
+ * \f}
+ * with \f$c_i=y_i+ \epsilon\f$ and \f$c_i^*=-y_i+ \epsilon\f$
+ *
+ * This implementation supports multiple kernel learning, i.e. if a
+ * CCombinedKernel is used the weights
+ * \f$\beta\f$ in \f$ k_{combined}({\bf x}, {\bf x'}) = \sum_{m=0}^M \beta_m k_m({\bf x}, {\bf x'})\f$
+ * can be determined in training (cf. Large Scale Multiple Kernel Learning
+ * Sonnenburg, Raetsch, Schaefer, Schoelkopf 2006).
+ *
+ * \b linadd optimizations were implemented for kernels that support it (most
+ * string kernels and the linear kernel), which will result in significant
+ * speedups.
+ */
 class CSVRLight: public CSVMLight
 {
 	public:
